fix z-index in header

--- a/site/style.less
+++ b/site/style.less
@@ -301,7 +301,7 @@
 .gym-header-session{
     position: absolute;
     top: 0;
-    z-index: 1000;
+    z-index: 1;
     width: 100%;
     background: black;
     opacity: 0.8;
@@ -585,7 +585,7 @@
             .gym-plan-cost-l:hover{
                 border: 2px solid !important;
                 border-color: @yellow-brand !important;
-                background: rgba(0,0,0,0.3);
+                background: @gray-light-font;
             }
 
 
